@@ -1,6 +1,6 @@
 // TortoiseSVN - a Windows shell extension for easy version control
 
-// Copyright (C) 2007-2008 - TortoiseSVN
+// Copyright (C) 2007-2008, 2010 - TortoiseSVN
 
 // This program is free software; you can redistribute it and/or
 // modify it under the terms of the GNU General Public License
@@ -21,12 +21,24 @@
 
 #include "ImportDlg.h"
 #include "SVNProgressDlg.h"
+#include "StringUtils.h"
 
 bool ImportCommand::Execute()
 {
 	bool bRet = false;
+	CString msg;
+	if (parser.HasKey(_T("logmsg")))
+	{
+		msg = parser.GetVal(_T("logmsg"));
+	}
+	if (parser.HasKey(_T("logmsgfile")))
+	{
+		CString logmsgfile = parser.GetVal(_T("logmsgfile"));
+		CStringUtils::ReadStringFromTextFile(logmsgfile, msg);
+	}
 	CImportDlg dlg;
 	dlg.m_path = cmdLinePath;
+	dlg.m_sMessage = msg;
 	if (parser.HasVal(_T("url")))
 		dlg.m_url = parser.GetVal(_T("url"));
 	if (dlg.DoModal() == IDOK)
